name:            authenticate
version:         0.11.1
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman, Hiromi Ishii, Arash Rouhani
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Authentication methods for Haskell web applications.
description:     Focus is on third-party authentication methods, such as OpenID,
                 rpxnow and Facebook.
category:        Web
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://github.com/yesodweb/authenticate

library
    build-depends:   base >= 4 && < 5,
                     aeson >= 0.5,
                     http-conduit >= 1.1 && < 1.2,
                     tagsoup >= 0.12 && < 0.13,
                     failure >= 0.0.0 && < 0.2,
                     transformers >= 0.1 && < 0.3,
                     bytestring >= 0.9 && < 0.10,
                     network >= 2.2.1 && < 2.4,
                     case-insensitive >= 0.2,
                     RSA >= 1.0 && < 1.1,
                     time >= 1.1,
                     base64-bytestring >= 0.1 && < 0.2,
                     SHA >= 1.4 && < 1.6,
                     random >= 1.0 && < 1.1,
                     text >= 0.5 && < 1.0,
                     http-types >= 0.6 && < 0.7,
                     xml-conduit >= 0.5 && < 0.6,
                     blaze-builder >= 0.2 && < 0.4,
                     attoparsec >= 0.9,
                     tls >= 0.7 && < 0.9,
                     containers,
                     unordered-containers,
                     process >= 1.0.1.1 && < 1.2,
                     conduit >= 0.0 && < 0.1,
                     blaze-builder-conduit >= 0.0 && < 0.1
    exposed-modules: Web.Authenticate.Rpxnow,
                     Web.Authenticate.OpenId,
                     Web.Authenticate.BrowserId,
                     Web.Authenticate.OpenId.Providers,
                     Web.Authenticate.OAuth,
                     Web.Authenticate.Facebook
                     Web.Authenticate.Kerberos
    other-modules:   Web.Authenticate.Internal,
                     OpenId2.Discovery,
                     OpenId2.Normalization,
                     OpenId2.Types,
                     OpenId2.XRDS
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/yesodweb/authenticate.git
