name:            restful
version:         0.1.3
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        A Restful front controller built on Hack.
category:        Web
stability:       unstable
cabal-version:   >= 1.2
build-type:      Simple
homepage:        http://github.com/snoyberg/restful/tree/master

library
    build-depends:   base >= 4 && < 5,
                     old-locale >= 1.0.0.1,
                     time >= 1.1.3,
                     hack-middleware-clientsession,
                     hack-middleware-jsonp >= 0.0.1,
                     hack-middleware-cleanpath >= 0.0.1,
                     hack-middleware-gzip,
                     hack-handler-cgi >= 0.0.2,
                     hack >= 2009.5.19,
                     split >= 0.1.1,
                     authenticate >= 0.0.1,
                     data-default >= 0.2,
                     predicates >= 0.1,
                     bytestring >= 0.9.1.4,
                     bytestring-class,
                     web-encodings >= 0.0.1,
                     mtl >= 1.1.0.2,
                     data-object >= 0.0.2,
                     yaml >= 0.0.4,
                     test-framework,
                     test-framework-quickcheck,
                     test-framework-hunit,
                     HUnit,
                     QuickCheck == 1.*,
                     enumerable >= 0.0.3,
                     directory >= 1
    exposed-modules: Web.Restful,
                     Web.Restful.Constants,
                     Web.Restful.Request,
                     Web.Restful.Response,
                     Web.Restful.Utils,
                     Web.Restful.Definitions,
                     Web.Restful.Handler,
                     Web.Restful.Application,
                     Web.Restful.Resource,
                     Data.Object.Instances,
                     Hack.Middleware.MethodOverride,
                     Web.Restful.Helpers.Auth,
                     Web.Restful.Helpers.Static,
                     Web.Restful.Response.AtomFeed,
                     Web.Restful.Response.Sitemap,
                     Web.Restful.Generic.ListDetail
    ghc-options:     -Wall -Werror
