name:            yesod-auth
version:         0.3.0
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman, Patrick Brisbin
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Authentication for Yesod.
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.6.0
build-type:      Simple
homepage:        http://docs.yesodweb.com/

flag ghc7

library
    if flag(ghc7)
        build-depends:   base                      >= 4.3      && < 5
        cpp-options:     -DGHC7
    else
        build-depends:   base                      >= 4        && < 4.3
    build-depends:   authenticate            >= 0.8       && < 0.9
                   , bytestring              >= 0.9.1.4   && < 0.10
                   , yesod-core              >= 0.7       && < 0.8
                   , wai                     >= 0.3       && < 0.4
                   , template-haskell
                   , pureMD5                 >= 1.1       && < 2.2
                   , random                  >= 1.0       && < 1.1
                   , data-object             >= 0.3.1.3   && < 0.4
                   , control-monad-attempt   >= 0.3.0     && < 0.4
                   , text                    >= 0.7       && < 0.12
                   , mime-mail               >= 0.1       && < 0.2
                   , blaze-html              >= 0.4       && < 0.5
                   , yesod-persistent        >= 0.0       && < 0.1
                   , hamlet                  >= 0.7       && < 0.8
                   , yesod-json              >= 0.0       && < 0.1
                   , containers              >= 0.2       && < 0.5
                   , json-types              >= 0.1       && < 0.2
                   , text                    >= 0.11      && < 0.12
                   , yesod-form              >= 0.0       && < 0.1
                   , transformers            >= 0.2       && < 0.3
                   , persistent              >= 0.4       && < 0.5
                   , SHA                     >= 1.4.1.3   && < 1.5
    exposed-modules: Yesod.Helpers.Auth
                     Yesod.Helpers.Auth.Dummy
                     Yesod.Helpers.Auth.Email
                     Yesod.Helpers.Auth.Facebook
                     Yesod.Helpers.Auth.OpenId
                     Yesod.Helpers.Auth.Rpxnow
                     Yesod.Helpers.Auth.HashDB
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/snoyberg/yesod-auth.git
