name:            yesod-auth
version:         0.6.1
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman, Patrick Brisbin
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Authentication for Yesod.
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.6.0
build-type:      Simple
homepage:        http://www.yesodweb.com/
extra-source-files: include/qq.h

flag ghc7

library
    if flag(ghc7)
        build-depends:   base                      >= 4.3      && < 5
        cpp-options:     -DGHC7
    else
        build-depends:   base                      >= 4        && < 4.3
    build-depends:   authenticate            >= 0.9       && < 0.10
                   , bytestring              >= 0.9.1.4   && < 0.10
                   , yesod-core              >= 0.8.3     && < 0.9
                   , wai                     >= 0.4       && < 0.5
                   , template-haskell
                   , pureMD5                 >= 1.1       && < 2.2
                   , random                  >= 1.0       && < 1.1
                   , control-monad-attempt   >= 0.3.0     && < 0.4
                   , text                    >= 0.7       && < 0.12
                   , mime-mail               >= 0.3       && < 0.4
                   , blaze-html              >= 0.4       && < 0.5
                   , yesod-persistent        >= 0.1       && < 0.2
                   , hamlet                  >= 0.8.1     && < 0.9
                   , yesod-json              >= 0.1       && < 0.2
                   , containers              >= 0.2       && < 0.5
                   , yesod-form              >= 0.2       && < 0.3
                   , transformers            >= 0.2       && < 0.3
                   , persistent              >= 0.5       && < 0.6
                   , persistent-template     >= 0.5       && < 0.6
                   , SHA                     >= 1.4.1.3   && < 1.5
                   , http-enumerator         >= 0.6       && < 0.7
                   , aeson                   >= 0.3.2.2   && < 0.4
                   , web-routes-quasi        >= 0.7       && < 0.8
                   , pwstore-fast            >= 2.1       && < 2.2

    exposed-modules: Yesod.Auth
                     Yesod.Auth.Dummy
                     Yesod.Auth.Email
                     Yesod.Auth.Facebook
                     Yesod.Auth.OpenId
                     Yesod.Auth.OAuth
                     Yesod.Auth.Rpxnow
                     Yesod.Auth.HashDB
                     Yesod.Auth.Message
    ghc-options:     -Wall
    include-dirs: include

source-repository head
  type:     git
  location: git://github.com/snoyberg/yesod-auth.git
