name:            yesod-core
version:         0.8.3
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Creation of type-safe, RESTful web applications.
description:
    Yesod is a framework designed to foster creation of RESTful web application that have strong compile-time guarantees of correctness. It also affords space efficient code and portability to many deployment backends, from CGI to stand-alone serving.
    .
    The Yesod documentation site <http://www.yesodweb.com/> has much more information, tutorials and information on some of the supporting packages, like Hamlet and Persistent.
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://www.yesodweb.com/

flag test
  description: Build the executable to run unit tests
  default: False

flag ghc7

library
    if flag(ghc7)
        build-depends:   base                      >= 4.3      && < 5
        cpp-options:     -DGHC7
    else
        build-depends:   base                      >= 4        && < 4.3
    build-depends:   time                      >= 1.1.4    && < 1.3
                   , wai                       >= 0.4      && < 0.5
                   , wai-extra                 >= 0.4      && < 0.5
                   , bytestring                >= 0.9.1.4  && < 0.10
                   , text                      >= 0.5      && < 0.12
                   , template-haskell
                   , web-routes-quasi          >= 0.7.0.1  && < 0.8
                   , hamlet                    >= 0.8.1    && < 0.9
                   , blaze-builder             >= 0.2.1    && < 0.4
                   , transformers              >= 0.2      && < 0.3
                   , clientsession             >= 0.6      && < 0.7
                   , random                    >= 1.0.0.2  && < 1.1
                   , cereal                    >= 0.2      && < 0.4
                   , old-locale                >= 1.0.0.2  && < 1.1
                   , failure                   >= 0.1      && < 0.2
                   , containers                >= 0.2      && < 0.5
                   , monad-control             >= 0.2      && < 0.3
                   , enumerator                >= 0.4.7    && < 0.5
                   , cookie                    >= 0.2.1    && < 0.3
                   , blaze-html                >= 0.4      && < 0.5
                   , http-types                >= 0.6      && < 0.7
                   , case-insensitive          >= 0.2      && < 0.3
                   , parsec                    >= 2        && < 3.2
                   , directory                 >= 1        && < 1.2
    exposed-modules: Yesod.Content
                     Yesod.Core
                     Yesod.Dispatch
                     Yesod.Handler
                     Yesod.Request
                     Yesod.Widget
                     Yesod.Message
    other-modules:   Yesod.Internal
                     Yesod.Internal.Core
                     Yesod.Internal.Session
                     Yesod.Internal.Request
                     Yesod.Internal.Dispatch
                     Paths_yesod_core
    ghc-options:     -Wall
    if flag(test)
        Buildable: False

executable             runtests
    if flag(ghc7)
        build-depends:   base                      >= 4.3      && < 5
        cpp-options:     -DGHC7
    else
        build-depends:   base                      >= 4        && < 4.3
    if flag(test)
        Buildable: True
        cpp-options:   -DTEST
        build-depends: test-framework,
                       test-framework-quickcheck2,
                       test-framework-hunit,
                       HUnit,
                       wai-test,
                       QuickCheck >= 2 && < 3
    else
        Buildable: False
    ghc-options:     -Wall
    main-is:         runtests.hs

source-repository head
  type:     git
  location: git://github.com/snoyberg/yesod-core.git
