name:            yesod-form
version:         0.0.0.1
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Form handling support for Yesod Web Framework
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://docs.yesodweb.com/

library
    build-depends:   base                      >= 4        && < 5
                   , yesod-core                >= 0.7      && < 0.8
                   , time                      >= 1.1.4    && < 1.3
                   , hamlet                    >= 0.7      && < 0.8
                   , persistent                >= 0.4      && < 0.5
                   , template-haskell
                   , transformers              >= 0.2.2    && < 0.3
                   , data-default              >= 0.2      && < 0.3
                   , xss-sanitize              >= 0.2.4    && < 0.3
                   , blaze-builder             >= 0.2.1    && < 0.3
                   , network                   >= 2.2      && < 2.4
                   , email-validate            >= 0.2.6    && < 0.3
                   , blaze-html                >= 0.4      && < 0.5
                   , bytestring                >= 0.9      && < 0.10
    exposed-modules: Yesod.Form
                     Yesod.Form.Class
                     Yesod.Form.Core
                     Yesod.Form.Fields
                     Yesod.Form.Jquery
                     Yesod.Form.Nic
                     Yesod.Form.Profiles
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/snoyberg/yesod-form.git
