name:            yesod-mega
version:         0.9.3
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Creation of type-safe, RESTful web applications.
description:
    Builds all yesod* repo code at once

category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/

flag ghc7

flag threaded
    default: True
    description: Build with support for multithreaded execution

flag test
  description: Build for use with running tests
  default: False

library
    hs-source-dirs: yesod, yesod-auth, yesod-core, yesod-default, yesod-examples, yesod-form, yesod-json, yesod-newsfeed, yesod-persistent, yesod-sitemap, yesod-static

    exposed-modules:
                     -- yesod
                     Yesod
                     -- yesod-static
                     Yesod.Static
                     -- yesod-persistent
                     Yesod.Persist
                     -- yesod-json
                     Yesod.Json
                     -- yesod-sitemap
                     Yesod.Sitemap

                     -- yesod-core
                     Yesod.Content
                     Yesod.Core
                     Yesod.Dispatch
                     Yesod.Handler
                     Yesod.Logger
                     Yesod.Request
                     Yesod.Widget
                     Yesod.Message
                     Yesod.Config
                     Yesod.Internal.TestApi

                     -- yesod-form
                     Yesod.Form
                     Yesod.Form.Class
                     Yesod.Form.Types
                     Yesod.Form.Functions
                     Yesod.Form.Input
                     Yesod.Form.Fields
                     Yesod.Form.Jquery
                     Yesod.Form.Nic
                     Yesod.Form.MassInput
                     Yesod.Form.I18n.English
                     Yesod.Form.I18n.Swedish

                     -- yesod-auth
                     Yesod.Auth
                     Yesod.Auth.BrowserId
                     Yesod.Auth.Dummy
                     Yesod.Auth.Email
                     Yesod.Auth.Facebook
                     Yesod.Auth.OpenId
                     Yesod.Auth.OAuth
                     Yesod.Auth.Rpxnow
                     Yesod.Auth.HashDB
                     Yesod.Auth.Message
                     Yesod.Auth.Kerberos

                     -- yesod-default
                     Yesod.Default.Config
                     Yesod.Default.Main
                     Yesod.Default.Util
                     Yesod.Default.Handlers

                     -- yesod-newsfeed
                     Yesod.AtomFeed
                     Yesod.RssFeed
                     Yesod.Feed

    other-modules:
                     -- yesod-newsfeed
                     Yesod.FeedTypes
                     -- yesod-core
                     Yesod.Internal
                     Yesod.Internal.Core
                     Yesod.Internal.Session
                     Yesod.Internal.Request
                     Yesod.Internal.Dispatch
                     Yesod.Internal.RouteParsing

                     -- yesod
                     Scaffolding.CodeGen
                     Scaffolding.Scaffolder
                     Devel
                     Build


    cpp-options:     -DMEGA

    if flag(ghc7)
        build-depends:   base                  >= 4.3      && < 5
        cpp-options:     -DGHC7
    else
        build-depends:   base                  >= 4        && < 4.3

    include-dirs: yesod-auth/include

    if !os(windows)
         build-depends: unix

    if flag(test)
      cpp-options:   -DTEST

    build-depends:
                   -- yesod
                     Cabal              >= 1.8          && < 1.13
                   , shakespeare-text   >= 0.10     && < 0.11
                   , filepath           >= 1.1          && < 1.3
                   , process
                   , attoparsec         >= 0.10
                   -- yesod-sitemap
                   -- empty

                   -- yesod-newsfeed
                   , wai-extra         >= 0.4.4 && < 0.5

                   -- yesod-default
                   , cmdargs           >= 0.8   && < 0.9

                   -- yesod-auth
                   , authenticate          >= 0.10.3    && < 0.11
                   , control-monad-attempt >= 0.3.0     && < 0.4
                   , mime-mail             >= 0.3       && < 0.4
                   , SHA                   >= 1.4.1.3   && < 1.6
                   , http-enumerator       >= 0.6       && < 0.8
                   , pwstore-fast          >= 2.2       && < 3
                   , old-time              >= 1.0
                   , base64-bytestring     >= 0.1.0.1  && < 0.2
                   , pureMD5               >= 2.1.0.3  && < 2.2
                   , cereal                >= 0.3      && < 0.4
                   , wai-app-static        >= 0.3.2.1  && < 0.4
                   , file-embed            >= 0.0.4.1  && < 0.5
                   , unix-compat           >= 0.2      && < 0.3
                   , enumerator            >= 0.4.14   && < 0.5
                   , transformers          >= 0.2.2    && < 0.3
                   , data-default          >= 0.3      && < 0.4
                   , xss-sanitize          >= 0.3.0.1  && < 0.4
                   , blaze-builder         >= 0.2.1    && < 0.4
                   , network               >= 2.2      && < 2.4
                   , email-validate        >= 0.2.6    && < 0.3
                   , persistent            >= 0.6      && < 0.7
                   , persistent-template   >= 0.6      && < 0.7
                   , failure               >= 0.1      && < 0.2
                   , warp                  >= 0.4      && < 0.5
                   , wai                   >= 0.4      && < 0.5
                   , wai-extra             >= 0.4.1    && < 0.5
                   , time                  >= 1.1.4
                   , bytestring            >= 0.9.1.4  && < 0.12
                   , text                  >= 0.9      && < 0.12
                   , template-haskell
                   , path-pieces           >= 0.0      && < 0.1
                   , hamlet                >= 0.10     && < 0.11
                   , shakespeare           >= 0.10     && < 0.11
                   , shakespeare-js        >= 0.10     && < 0.11
                   , shakespeare-css       >= 0.10     && < 0.11
                   , blaze-builder         >= 0.2.1    && < 0.4
                   , clientsession         >= 0.7.3.1  && < 0.8
                   , random                >= 1.0.0.2  && < 1.1
                   , old-locale            >= 1.0.0.2  && < 1.1
                   , failure               >= 0.1      && < 0.2
                   , containers            >= 0.2      && < 0.5
                   , monad-control         >= 0.2      && < 0.3
                   , cookie                >= 0.3      && < 0.4
                   , blaze-html            >= 0.4.1.3  && < 0.5
                   , http-types            >= 0.6.5    && < 0.7
                   , case-insensitive      >= 0.2      && < 0.4
                   , parsec                >= 2.0      && < 3.2
                   , directory             >= 1.0      && < 1.2
                   , data-object           >= 0.3      && < 0.4
                   , data-object-yaml      >= 0.3      && < 0.4
                   , strict-concurrency    >= 0.2.4    && < 0.2.5
                   , vector                >= 0.9      && < 0.10
                   , aeson                 >= 0.3

    ghc-options:     -Wall

test-suite tests
    type: exitcode-stdio-1.0
    main-is: main.hs
    hs-source-dirs: 
                    test
                    yesod-core/test
                    yesod-static/test

    if flag(ghc7)
        type: exitcode-stdio-1.0
        build-depends:   base                      >= 4.3      && < 5
        cpp-options:     -DGHC7
        main-is:         test.hs
    else
        type: exitcode-stdio-1.0
        build-depends:   base                      >= 4        && < 4.3
        main-is:         test.hs
    cpp-options:   -DTEST
    build-depends: yesod-mega
                  ,hspec >= 0.8 && < 0.10
                  ,wai-test >= 0.1.2 && < 0.2
                  ,wai
                  ,bytestring
                  ,hamlet
                  ,shakespeare-css
                  ,shakespeare-js
                  ,text
                  ,http-types
                  , random
                  ,HUnit
                  ,QuickCheck >= 2 && < 3
                  , enumerator
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/yesodweb/yesod.git
