name:            yesod-newsfeed
version:         0.2.0
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman, Patrick Brisbin
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Helper functions and data types for producing News feeds.
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://docs.yesodweb.com/

library
    build-depends:   base                      >= 4        && < 5
                   , yesod-core                >= 0.8      && < 0.9
                   , time                      >= 1.1.4    && < 1.3
                   , hamlet                    >= 0.8      && < 0.9
                   , bytestring                >= 0.9      && < 0.10
                   , text                      >= 0.9      && < 1.0
    exposed-modules: Yesod.AtomFeed
                   , Yesod.RssFeed
                   , Yesod.Feed
    other-modules:   Yesod.FeedTypes
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/snoyberg/yesod-newsfeed.git
