name:            yesod-sitemap
version:         0.0.0
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Generate XML sitemaps.
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://docs.yesodweb.com/

library
    build-depends:   base                      >= 4        && < 5
                   , yesod-core                >= 0.7      && < 0.8
                   , time                      >= 1.1.4    && < 1.3
                   , hamlet                    >= 0.7      && < 0.8
    exposed-modules: Yesod.Helpers.Sitemap
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/snoyberg/yesod-sitemap.git
