name:            yesod-static
version:         0.0.0
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Static file serving subsite for Yesod Web Framework.
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://docs.yesodweb.com/

flag test
  description: Build the executable to run unit tests
  default: False

library
    build-depends:   base                      >= 4        && < 5
                   , yesod-core                >= 0.7      && < 0.8
                   , base64-bytestring         >= 0.1.0.1  && < 0.2
                   , pureMD5                   >= 2.1.0.3  && < 2.2
                   , cereal                    >= 0.3      && < 0.4
                   , bytestring                >= 0.9      && < 0.10
                   , web-routes                >= 0.23     && < 0.24
                   , template-haskell
                   , directory                 >= 1.0      && < 1.2
                   , transformers              >= 0.2      && < 0.3
                   , wai-app-static            >= 0.0.1    && < 0.1
    exposed-modules: Yesod.Helpers.Static
    ghc-options:     -Wall

executable             runtests
    if flag(test)
        Buildable: True
        cpp-options:   -DTEST
        build-depends: test-framework,
                       test-framework-quickcheck2,
                       test-framework-hunit,
                       HUnit,
                       QuickCheck >= 2 && < 3
    else
        Buildable: False
    ghc-options:     -Wall
    main-is:         runtests.hs

source-repository head
  type:     git
  location: git://github.com/snoyberg/yesod-static.git
